Implement serial batch execution in LinearStrategy (#352)
- Added 'serial' field to Play record and YamlParser.
- Implemented batching logic in LinearStrategy, supporting integers, percentages, and lists.
- Updated VariableManager to support 'ansible_play_batch' magic variable per batch.
- Ensured handlers are flushed at the end of each batch.
- Added comprehensive integration tests for serial execution.
- Refactored TaskQueueManager to preserve host order using LinkedHashMap.
- Refactored Task to use mutable collections in convenience constructors.
- Updated documentation to reflect the completed 'serial' feature.

Co-authored-by: google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>
Co-authored-by: yamanakahirofumi <14960462+yamanakahirofumi@users.noreply.github.com>